--- a/src/app/navbar/top-navbar.styles.css
+++ b/src/app/navbar/top-navbar.styles.css
@@ -1,3 +1,7 @@
+.container {
+    padding: 0px !important;
+}
+
 .navbar-nav a {
     font-family: fa5-proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 500;
